--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -110,7 +110,7 @@
                   <!-- Senator(s) -->
                   <tr>
                     <td data-label="Position">Senator(s)</td>
-                    <td data-label="Candidate" colspan="2">Zarina B. Aquino – KASAMA – BulSU, Zarina B. Aquino – KASAMA – BulSU</td>
+                    <td data-label="Candidate" colspan="2">Zarina B. Aquino – KASAMA – BulSU, Zarina B. Aquino</td>
                   </tr>
                   <!-- Governor -->
                   <tr>
