--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/home.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index_election.css" /> -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="components/notification.css" />
@@ -70,9 +71,7 @@
 
           <!-- Label for the countdown -->
           <h2 id="time-left" class="h1"></h2>
-          <h2 id="get-ready-to-register" class="h1"></h2>
-          <br />
-          <br />
+          <h2 id="get-ready-container" class="h1 waiting-text">| &nbsp;<span id="get-ready-to-register"></span></h2>
 
           <!-- The register button uses an id for stable reference -->
           <button id="register-button" class="button-rounded-yellow" onclick="window.location.href='/data-privacy';">REGISTER NOW</button>
@@ -144,6 +143,7 @@
       const secondsElem = document.getElementById("seconds");
       const timeLeftElem = document.getElementById("time-left");
       const getReadyToRegisterElem = document.getElementById("get-ready-to-register");
+      const getReadyToRegisterContainer = document.getElementById("get-ready-container");
       const registerButton = document.getElementById("register-button");
 
       function updatePhase() {
@@ -158,7 +158,7 @@
         } else if (now >= registrationStart && now <= registrationEnd) {
           electionPeriodElem.textContent = "Registration Period:";
           timeLeftElem.textContent = "Left to Register";
-          getReadyToRegisterElem.textContent = "";
+          getReadyToRegisterContainer.textContent = "";
           distance = registrationEnd - now;
           registerButton.style.display = "block";
         } else {
