--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -48,7 +48,7 @@
       <div class="main-first">
         <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
         <div class="first-text">
-          <h2 class="title">BulSU Student Government Elections<br />2025 - 2026</h2>
+          <h2 class="title">BulSU Student Government Elections<br />S.Y. 2025 - 2026</h2>
         </div>
         <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
@@ -222,9 +222,9 @@
 
             <div>
               <br />
-              <hr />
-              <p><i>You still need to review and confirm your votes in the next page.</i></p>
-              <hr />
+              <hr class="review-line" />
+              <p class="review"><i>You still need to review and confirm your votes in the next page.</i></p>
+              <hr class="review-line" />
               <br />
               <button class="continue-application">
                 <div>
