--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -330,5 +330,6 @@
 
       document.addEventListener("DOMContentLoaded", updateDateTime);
     </script>
+    <script src="js/dropdown.js"></script>
   </body>
 </html>
