--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -63,17 +63,16 @@
       <div class="content-main receipt-container">
         <div class="verify">
           <div class="row">
-            <div class="column">
+            <div class="column box-shadow">
               <div class="d-flex">
                 <img src="/img/logo_tanikala.png" />
               </div>
               <br />
-              <div class="d-flex justify-content-between">
-                <strong>Tanikala Voting System</strong>
+              <!-- <div class="d-flex justify-content-between">
                 <strong>Student Copy</strong>
-              </div>
+              </div> -->
               <div class="d-flex flex-col justify-content-center">
-                <h2 class="align-center title">Voting Receipt</h2>
+                <h3 class="align-center title">Voting Receipt</h3>
               </div>
               <br />
               <hr />
@@ -258,5 +257,6 @@
       document.addEventListener("DOMContentLoaded", updateDateTime);
     </script>
     <script src="js/index.js"></script>
+    <script src="js/dropdown.js"></script>
   </body>
 </html>
