--- a/public/css/index.css
+++ b/public/css/index.css
@@ -71,6 +71,20 @@ body {
   font-size: 1rem;
 }
 
+.header-nav-content li {
+  list-style: none;
+}
+
+.header-nav-content a,
+.header-nav-content li {
+  color: var(--color-lightYellow);
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+.header-nav-content {
+  gap: 4rem;
+}
+
 /* Header */
 .header {
   display: flex;
