--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -229,7 +229,7 @@
             <br />
             <!-- Submit button -->
             <div class="button-container">
-              <button class="button-back" type="button" onclick="window.location.href='/vote'">
+              <button class="button-back" type="button" onclick="window.history.back()">
                 <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12H4.5m0 0l6.75-6.75M4.5 12l6.75 6.75"></path>
                 </svg>
