--- a/public/admin/css/candidates.css
+++ b/public/admin/css/candidates.css
@@ -147,13 +147,13 @@ form img {
 }
 
 .candidate .img-container {
-  border-radius: 50%;
-  background-color: white; /* Set the background to white */
+  /* background-color: white; */
   display: inline-block; /* Ensure it only takes up as much space as needed */
   display: flex; /* Align the content */
   justify-content: center; /* Center the content horizontally */
   align-items: center; /* Center the content vertically */
   overflow: hidden;
+  width: 25%;
 }
 
 .candidate img {
