--- a/public/admin/css/vote-tally.css
+++ b/public/admin/css/vote-tally.css
@@ -48,7 +48,7 @@
 
 .container-lsc {
   background-color: var(--background-light-green);
-  margin: 4%;
+  margin: 4% 2%;
   padding: 6%;
   border-radius: 2em;
 }
@@ -89,8 +89,9 @@
 .candidate {
   /* border: 1px solid black; */
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
+  padding: 0.5rem;
 }
 
 .candidate-info {
@@ -98,11 +99,19 @@
   flex-direction: column;
   width: 100%;
   padding: 1rem;
-  padding-left: 3rem;
+  padding-left: 2rem;
 
   /* border: 1px solid black; */
 }
 
 .container-position {
   padding: 0;
+}
+.img-container img {
+  height: 6.5rem;
+  width: 6.5rem;
+}
+
+.total-votes {
+  text-align: right;
 }
