--- a/public/admin/dependencies/progress-bar.css
+++ b/public/admin/dependencies/progress-bar.css
@@ -39,3 +39,23 @@ progress::-moz-progress-bar {
   background-color: #4a0707;
   border-radius: 0.625em;
 }
+
+.progress-bar {
+  background-color: #faf2db;
+  border-radius: 10px;
+  width: 100%;
+  height: 1.7rem;
+  overflow: hidden;
+  margin-top: 0.5rem;
+}
+
+.progress {
+  background-color: #4caf50;
+  color: white;
+  height: 100%;
+  width: 0; /* this value is set inline from the EJS variable */
+  transition: width 0.5s ease-in-out;
+  padding: 0.15rem;
+  padding-left: 0.5rem;
+  font-size: 0.9rem;
+}
