--- a/views/admin/election-results.ejs
+++ b/views/admin/election-results.ejs
@@ -8,9 +8,11 @@
 
     <link rel="stylesheet" type="text/css" href="admin/css/index-admin.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/vote-tally.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/candidates.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/sidebar.css" />
 
     <link rel="stylesheet" type="text/css" href="admin/dependencies/progress-bar.css" />
+
     <!-- <link rel="stylesheet" type="text/css" href="admin/dependencies/liner-bar.css" /> -->
 
     <!-- Boxicons CDN Link -->
@@ -225,45 +227,100 @@
 
             <!-- President -->
             <div class="container-ssc" id="container-president">
-              <h1>President</h1>
-              <% if (groupedResults.president && Array.isArray(groupedResults.president)) { %> <% groupedResults.president.forEach(function(candidate) { %>
-              <div class="candidate">
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h3><%= candidate.name %></h3>
-                <p>Party: <%= candidate.party %></p>
-                <p>Votes: <%= candidate.voteCount %></p>
+              <div class="container-position">
+                <h1 class="position-ssc">President</h1>
               </div>
-              <% }); %> <% } else { %>
+              <hr />
+              <br />
+              <% if (groupedResults.president && Array.isArray(groupedResults.president)) { groupedResults.president.forEach(function(candidate) { %>
+              <div class="candidate">
+                <div class="img-container">
+                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                </div>
+                <div class="candidate-info">
+                  <h3><%= candidate.name %></h3>
+                  <p>Party: <%= candidate.party %></p>
+                  <div class="row">
+                    <div class="progress-bar">
+                      <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                    </div>
+
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                  </div>
+                  <br />
+                  <br />
+                  <div class="total-votes">
+                    <p>150 votes out of 1500 total votes</p>
+                  </div>
+                </div>
+              </div>
+              <% }); } else { %>
               <p>No candidates for President</p>
               <% } %>
             </div>
 
             <!-- Vice President -->
             <div class="container-ssc" id="container-vice-president">
-              <h1>Vice President</h1>
-              <% if (groupedResults["vice president"] && Array.isArray(groupedResults["vice president"])) { %> <% groupedResults["vice president"].forEach(function(candidate) { %>
-              <div class="candidate">
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h3><%= candidate.name %></h3>
-                <p>Party: <%= candidate.party %></p>
-                <p>Votes: <%= candidate.voteCount %></p>
+              <div class="container-position">
+                <h1 class="position-ssc">Vice President</h1>
               </div>
-              <% }); %> <% } else { %>
+              <hr />
+              <br />
+              <% if (groupedResults["vice president"] && Array.isArray(groupedResults["vice president"])) { groupedResults["vice president"].forEach(function(candidate) { %>
+              <div class="candidate">
+                <div class="img-container">
+                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                </div>
+                <div class="candidate-info">
+                  <h3><%= candidate.name %></h3>
+                  <p>Party: <%= candidate.party %></p>
+                  <div class="row">
+                    <div class="progress-bar">
+                      <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                    </div>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                  </div>
+                  <br />
+                  <br />
+                  <div class="total-votes">
+                    <p>150 votes out of 1500 total votes</p>
+                  </div>
+                </div>
+              </div>
+              <% }); } else { %>
               <p>No candidates for Vice President</p>
               <% } %>
             </div>
 
             <!-- Senators (Top 7 with ties) -->
             <div class="container-ssc" id="container-senator">
-              <h1>Senators</h1>
-              <% if (groupedResults.senator && Array.isArray(groupedResults.senator)) { %> <% groupedResults.senator.forEach(function(candidate) { %>
-              <div class="candidate">
-                <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                <h3><%= candidate.name %></h3>
-                <p>Party: <%= candidate.party %></p>
-                <p>Votes: <%= candidate.voteCount %></p>
+              <div class="container-position">
+                <h1 class="position-ssc">Senators</h1>
               </div>
-              <% }); %> <% } else { %>
+              <hr />
+              <br />
+              <% if (groupedResults.senator && Array.isArray(groupedResults.senator)) { groupedResults.senator.forEach(function(candidate) { %>
+              <div class="candidate">
+                <div class="img-container">
+                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                </div>
+                <div class="candidate-info">
+                  <h3><%= candidate.name %></h3>
+                  <p>Party: <%= candidate.party %></p>
+                  <div class="row">
+                    <div class="progress-bar">
+                      <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                    </div>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                  </div>
+                  <br />
+                  <br />
+                  <div class="total-votes">
+                    <p>150 votes out of 1500 total votes</p>
+                  </div>
+                </div>
+              </div>
+              <% }); } else { %>
               <p>No candidates for Senator</p>
               <% } %>
             </div>
@@ -276,8 +333,7 @@
               <br />
               <!-- College Filter -->
               <select name="college" id="college-selector">
-                <option value="">-- Select a College --</option>
-                <option value="cafa">College of Architecture and Fine Arts (CAFA)</option>
+                <option value="cafa" selected>College of Architecture and Fine Arts (CAFA)</option>
                 <option value="cal">College of Arts and Letters (CAL)</option>
                 <option value="cbea">College of Business Education and Accountancy (CBEA)</option>
                 <option value="ccje">College of Criminal Justice Education (CCJE)</option>
@@ -296,13 +352,31 @@
             <div id="lsc-container">
               <!-- Governor -->
               <div class="container-lsc" id="container-lsc-governor">
-                <h1>Governor</h1>
+                <div class="container-position">
+                  <h1 class="position-lsc">Governor</h1>
+                </div>
+                <hr />
+                <br />
                 <% if (groupedResults.governor && typeof groupedResults.governor === 'object') { %> <% Object.keys(groupedResults.governor).forEach(function(college) { %> <% groupedResults.governor[college].forEach(function(candidate) { %>
                 <div class="candidate lsc-candidate" data-college="<%= college %>">
-                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                  <h3><%= candidate.name %></h3>
-                  <p>Party: <%= candidate.party %></p>
-                  <p>Votes: <%= candidate.voteCount %></p>
+                  <div class="img-container">
+                    <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  </div>
+                  <div class="candidate-info">
+                    <h3><%= candidate.name %></h3>
+                    <p>Party: <%= candidate.party %></p>
+                    <div class="row">
+                      <div class="progress-bar">
+                        <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                      </div>
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                    </div>
+                    <br />
+                    <br />
+                    <div class="total-votes">
+                      <p>150 votes out of 1500 total votes</p>
+                    </div>
+                  </div>
                 </div>
                 <% }); %> <% }); %> <% } else { %>
                 <p>No candidates for Governor</p>
@@ -311,13 +385,31 @@
 
               <!-- Vice Governor -->
               <div class="container-lsc" id="container-lsc-vice-governor">
-                <h1>Vice Governor</h1>
+                <div class="container-position">
+                  <h1 class="position-lsc">Vice Governor</h1>
+                </div>
+                <hr />
+                <br />
                 <% if (groupedResults["vice governor"] && typeof groupedResults["vice governor"] === 'object') { %> <% Object.keys(groupedResults["vice governor"]).forEach(function(college) { %> <% groupedResults["vice governor"][college].forEach(function(candidate) { %>
                 <div class="candidate lsc-candidate" data-college="<%= college %>">
-                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                  <h3><%= candidate.name %></h3>
-                  <p>Party: <%= candidate.party %></p>
-                  <p>Votes: <%= candidate.voteCount %></p>
+                  <div class="img-container">
+                    <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  </div>
+                  <div class="candidate-info">
+                    <h3><%= candidate.name %></h3>
+                    <p>Party: <%= candidate.party %></p>
+                    <div class="row">
+                      <div class="progress-bar">
+                        <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                      </div>
+                      <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                    </div>
+                    <br />
+                    <br />
+                    <div class="total-votes">
+                      <p>150 votes out of 1500 total votes</p>
+                    </div>
+                  </div>
                 </div>
                 <% }); %> <% }); %> <% } else { %>
                 <p>No candidates for Vice Governor</p>
@@ -325,34 +417,74 @@
               </div>
 
               <!-- Board Member -->
+              <!-- Board Member -->
+              <!-- Board Member -->
               <div class="container-lsc" id="container-lsc-board-member">
-                <h1>Board Member</h1>
-                <% if (groupedResults["board member"] && typeof groupedResults["board member"] === 'object') { %> <% Object.keys(groupedResults["board member"]).forEach(function(college) { %>
-                <h2><%= college %></h2>
-                <% var programs = groupedResults["board member"][college]; %> <% Object.keys(programs).forEach(function(program) { %>
-                <h3><%= program %></h3>
-                <% programs[program].forEach(function(candidate) { %>
-                <div class="candidate lsc-candidate" data-college="<%= college %>" data-program="<%= program %>">
-                  <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
-                  <h4><%= candidate.name %></h4>
-                  <p>Party: <%= candidate.party %></p>
-                  <p>Votes: <%= candidate.voteCount %></p>
+                <div class="container-position">
+                  <h1 class="position-lsc">Board Member</h1>
                 </div>
-                <% }); %> <% }); %> <% }); %> <% } else { %>
+                <hr />
+                <br />
+                <% if (groupedResults["board member"] && typeof groupedResults["board member"] === 'object') { %> <% Object.keys(groupedResults["board member"]).forEach(function(college) { %>
+                <div class="board-member-group" data-college="<%= college.toLowerCase() %>">
+                  <% var programs = groupedResults["board member"][college]; %> <% Object.keys(programs).forEach(function(program) { %>
+                  <div class="program-group">
+                    <h3><%= program %></h3>
+                    <% programs[program].forEach(function(candidate) { %>
+                    <div class="candidate lsc-candidate" data-college="<%= college.toLowerCase() %>" data-program="<%= program %>">
+                      <div class="img-container">
+                        <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                      </div>
+                      <div class="candidate-info">
+                        <h4><%= candidate.name %></h4>
+                        <p>Party: <%= candidate.party %></p>
+                        <div class="row">
+                          <div class="progress-bar">
+                            <div class="progress" style="width: <%= candidate.percentage %>%"><%= candidate.voteCount %> votes</div>
+                          </div>
+                          <p>&nbsp;&nbsp;&nbsp;&nbsp;<%= candidate.percentage %>%</p>
+                        </div>
+                        <br />
+                        <br />
+                        <div class="total-votes">
+                          <p>150 votes out of 1500 total votes</p>
+                        </div>
+                      </div>
+                    </div>
+                    <% }); %>
+                  </div>
+                  <% }); %>
+                </div>
+                <% }); %> <% } else { %>
                 <p>No candidates for Board Member</p>
                 <% } %>
               </div>
             </div>
 
-            <!-- LSC College Filter Script -->
             <script>
               document.addEventListener("DOMContentLoaded", function () {
                 const selector = document.getElementById("college-selector");
+
                 function filterLSCCandidates() {
-                  const selectedCollege = selector.value;
+                  const selectedCollege = selector.value.toLowerCase();
+
+                  // Filter board member groups:
+                  const boardGroups = document.querySelectorAll(".board-member-group");
+                  boardGroups.forEach((group) => {
+                    const groupCollege = group.getAttribute("data-college");
+                    // Show group only if it matches the selected college; hide otherwise.
+                    if (groupCollege === selectedCollege) {
+                      group.style.display = "block";
+                    } else {
+                      group.style.display = "none";
+                    }
+                  });
+
+                  // Optionally, if you want to filter the other sections (Governor, Vice Governor) in the same way:
                   const candidateCards = document.querySelectorAll(".lsc-candidate");
                   candidateCards.forEach((card) => {
                     const candidateCollege = card.getAttribute("data-college").toLowerCase();
+                    // Here, if the candidate belongs to the selected college, show it; otherwise hide it.
                     if (!selectedCollege || candidateCollege === selectedCollege) {
                       card.style.display = "block";
                     } else {
@@ -360,7 +492,10 @@
                     }
                   });
                 }
+
+                // Run filter when the selector changes.
                 selector.addEventListener("change", filterLSCCandidates);
+                // Run filter on page load.
                 filterLSCCandidates();
               });
             </script>
